--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diseñador Freelancer</title>
+    <title>Diseñador</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Krub:wght@400;700&display=swap');
     </style>
