actualizacion de titulo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <h1 class="titulo">Gissela Sangoquiza 
+        <h1 class="titulo">Gissela Estefanía Sangoquiza Sánchez
         <span>Freelancer</span> </h1>
     </header>
     <div class="nav-bg">
